--- a/values.yaml
+++ b/values.yaml
@@ -2,6 +2,7 @@
 images:
   bash: docker.io/library/bash:latest
   skopeo: quay.io/skopeo/stable:latest
+  buildah: quay.io/buildah/stable:latest
 
 annotations:
   tekton.dev/pipelines.minVersion: "0.38.0"
